fix(modal): make modal responsive on mobile device

--- a/src/styles/components/modal/_modal.scss
+++ b/src/styles/components/modal/_modal.scss
@@ -6,10 +6,16 @@
   transform: translate(-50%, -50%);
   width: 50rem;
   height: 30rem;
+  background-color: #fff;
   letter-spacing: 0.5px;
   border: none;
   border-radius: 0;
-  background-color: #fff;
+  outline: none;
+
+  @media only screen and (max-width: $bp-small) {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .close-modal {
@@ -17,9 +23,22 @@
   height: 2rem;
 }
 
+.modal-content {
+  @media only screen and (max-width: $bp-small) {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
 .book-this-flight {
   margin-top: 2rem;
   margin-bottom: 3rem;
+
+  @media only screen and (max-width: $bp-small) {
+    text-align: center;
+  }
 }
 
 .sign-in-google-icon {
@@ -36,6 +55,10 @@
   text-align: center;
   border: 2px solid rgba($color-secondary, 0.7);
   border-radius: 4px;
+
+  @media only screen and (max-width: $bp-small) {
+    width: 35rem;
+  }
 }
 
 .modal-question {
